--- a/submissions/vladk96/google-popup/src/scss/main.scss
+++ b/submissions/vladk96/google-popup/src/scss/main.scss
@@ -5,7 +5,13 @@ $basic-font-size: .81rem;
 $light-black: rgba(0,0,0,.1);
 $dark-black: rgba(0,0,0,.87);
 
-body { font-family: Arial, sans-serif; }
+:focus{
+  outline: none;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
 
 .header__menu {
   display: flex;
@@ -16,24 +22,33 @@ body { font-family: Arial, sans-serif; }
 .menu {
   display: flex;
   align-items: center;
+}
 
-  &__item {
-    list-style: none;
-    margin: 0 7.5px;
-  }
+.menu__link {
+  font-size: $basic-font-size;
+  text-decoration: none;
+  color: $dark-black;
+}
 
-  &__link {
-    font-size: $basic-font-size;
-    text-decoration: none;
-    color: $dark-black;
-  }
+.menu__item:nth-child(3) { 
+  position: relative; 
+}
 
-  &__item:nth-child(3) { position: relative; }
+.menu__item:not(:last-child):hover {
+  text-decoration: underline;
+}
 
-  &__item:not(:last-child):hover { text-decoration: underline; }
+.menu__trigger, .submenu { 
+  display: none;
+}
 
-  #menu__trigger, .submenu { display: none; }
-  #menu__trigger:checked + .submenu { display: flex; }
+.menu__trigger:checked + .submenu { 
+  display: flex;
+}
+
+.menu__item {
+  list-style: none;
+  margin: 0 7.5px;
 }
 
 .icon-menu {
@@ -42,8 +57,10 @@ body { font-family: Arial, sans-serif; }
   height: 15px;
   background: url(../images/menu.svg) no-repeat center top;
   background-size: contain;
+}
 
-  &:hover{ filter: brightness(0%); }
+.icon-menu:hover{ 
+  filter: brightness(0%);
 }
 
 .icon-circle {
@@ -51,21 +68,24 @@ body { font-family: Arial, sans-serif; }
   height: 20px;
   background-color: rgba(0,0,0,.55);
   border-radius: 50%;
-
-  &:hover { background-color: $dark-black; }
-
-  &::before {
-    content: '';
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-top: calc(50% - 4px);
-    margin-left: calc(50% - 4px);
-    background: url(../images/bell.svg) no-repeat center center;
-    background-size: contain;
-    filter: invert(100%);
-  }
 }
+
+.icon-circle:hover {
+  background-color: $dark-black;
+}
+
+.icon-circle::before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-top: calc(50% - 4px);
+  margin-left: calc(50% - 4px);
+  background: url(../images/bell.svg) no-repeat center center;
+  background-size: contain;
+  filter: invert(100%);
+}
+
 
 .icon-account {
   display: flex;
@@ -75,12 +95,18 @@ body { font-family: Arial, sans-serif; }
   height: 30px;
   background-color: rgb(87,19,133);
   border-radius: 50%;
+}
+.icon-account__text {
+   margin: 0;
+   font-size: 1.1rem;
+   color: #fff;
+}
 
-  &__text {
-    margin: 0;
-    font-size: 1.1rem;
-    color: #fff;
-  }
+.icon-menu:focus,
+.icon-circle:focus,
+.icon-account:focus,
+.submenu__link:focus .submenu__icon {
+  outline: 1px solid rgba(62, 62, 212, 0.38);
 }
 
 .submenu {
@@ -93,84 +119,102 @@ body { font-family: Arial, sans-serif; }
   border: 1px solid #ccc;
   border-radius: 1px;
   box-shadow: 0 2px 10px rgba(0,0,0,.2);
+}
 
-  &__wrap {
-    display: flex;
-    flex-wrap: wrap;
-    overflow-y: hidden;
-  }
+.submenu__wrap {
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: hidden;
+}
 
-  &::before,
-  &::after {
-    content: ''; 
-    position: absolute;
-    right: 25%;
-    top: -20px;
-    border: 10px solid transparent;
-    border-bottom: 10px solid #ccc;
-   }
+.submenu::before,
+.submenu::after {
+  content: ''; 
+  position: absolute;
+  right: 25%;
+  top: -20px;
+  border: 10px solid transparent;
+  border-bottom: 10px solid #ccc;
+}
 
-  &::after {
-    border-bottom: 10px solid white;
-    top: -19px; 
-  }
+.submenu::after {
+  border-bottom: 10px solid white;
+  top: -19px; 
+}
 
-  &__link {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 10px ;
-    text-decoration: none;
-    border: 1px solid transparent;
-    border-radius: 2px;
-  }
+.submenu__link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px ;
+  text-decoration: none;
+  border: 1px solid transparent;
+  border-radius: 2px;
+}
 
-  &__link:hover { border: 1px solid $light-black; }
+.submenu__link:hover {
+  border: 1px solid $light-black;
+}
   
-  &__icon { transform: scale(.8); }
+.submenu__icon {
+  transform: scale(.8);
+}
   
-  &__title {
-    margin: .5rem 0;
-    font-size: $basic-font-size;
-    font-weight: normal;
-    color: $dark-black;
-  }
+.submenu__title {
+  margin: .5rem 0;
+  font-size: $basic-font-size;
+  font-weight: normal;
+  color: $dark-black;
+}
   
-  &__line {
-    width: 100%;
-    height: 1px;
-    margin: 2rem 0; 
-    background-color: $light-black;
-  }
+.submenu__line {
+  width: 100%;
+  height: 1px;
+  margin: 2rem 0; 
+  background-color: $light-black;
+}
   
-  &__btn-more {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: $light-black;
-  }
-  
-  &__btn-text {
-    margin: .6rem 0;
-    font-size: $basic-font-size;
-    text-align: center;
-    cursor: pointer;
-  }
-  
-  &__link-more {
-    width: 100%;
-    text-decoration: none;
-    font-size: $basic-font-size;
-    color: $dark-black;
-    text-align: center;
-    margin-top: 15px;
-  }
-  
-  &__link-more:hover { text-decoration: underline; }
+.submenu__btn-more {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: $light-black;
+}
 
-  #submenu__check-more { display: none; }
-  #submenu__check-more:checked ~ .submenu__wrap { overflow-y: scroll; }
-  #submenu__check-more:checked ~ .submenu__label { display: none; }
+.submenu__btn-text {
+  margin: .6rem 0;
+  font-size: $basic-font-size;
+  text-align: center;
+  cursor: pointer;
+}
+  
+.submenu__link-more {
+  width: 100%;
+  text-decoration: none;
+  font-size: $basic-font-size;
+  color: $dark-black;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.submenu__link-more:focus {
+  outline: 5px solid rgba(62, 62, 212, 0.38);
+}
+
+.submenu__link-more:hover {
+  text-decoration: underline;
+}
+
+.submenu__check-more {
+  display: none;
+}
+
+.submenu__check-more:checked ~ .submenu__wrap {
+  overflow-y: scroll;
+}
+
+.submenu__check-more:checked ~ .submenu__label {
+  display: none;
 }
