--- a/submissions/Aldegid/google-style-popup/app/sass/main.sass
+++ b/submissions/Aldegid/google-style-popup/app/sass/main.sass
@@ -90,7 +90,7 @@ body
 	padding: 0 10px
 	margin: 5px 10px
 	cursor: pointer
-	&:hover, &:focus
+	&:hover
 		border: 1px solid rgba(0,0,0,.2)
 		border-radius: 2px
 
@@ -105,6 +105,9 @@ body
 	background-image: url(../img/all-serv.png)
 
 .popup__input:focus + label
+	box-shadow: 0 0 0 1.5px rgb(77, 144, 254)
+
+.more-input:focus + label
 	box-shadow: 0 0 0 1.5px rgb(77, 144, 254)
 
 .g-plus
@@ -172,11 +175,11 @@ body
 	margin-bottom: 20px
 
 .more-btn
-	width: 100%
 	background-color: #f5f5f5
 	padding: 10px 0
 	display: block
 	cursor: pointer
+	margin: 1px
 
 .popup__input:checked ~ .popup__inner
 	display: block
