--- a/submissions/kalash14/html-css-popup/scss/_vars.scss
+++ b/submissions/kalash14/html-css-popup/scss/_vars.scss
@@ -1,5 +1,5 @@
-$default-font: arial,sans-serif;
-$text: rgba(0,0,0,0.87);
-$defaulImagePath: '../img/';
+$default-font: arial, sans-serif;
+$text: rgba(0, 0, 0, 0.87);
+$defaulImagePath: "../img/";
 $white: #fff;
 $shadowColor: rgba(0, 0, 0, 0.2);
