--- a/submissions/patrofimov/css-popup-menu/style.css
+++ b/submissions/patrofimov/css-popup-menu/style.css
@@ -1,6 +1,107 @@
+ul {
+  list-style: none;
+  margin: 0px;
+  display: block;
+  padding: 0px;
+}
+
 .sub-menu,
 .sub-menu-more,
 .other-item {
+  display: none;
+}
+
+.menu-apps {
+  cursor: pointer;
+  position: relative;
+  background: url(images/square.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-background-size: 15px 15px;
+  background-size: 15px;
+  width: 25px;
+  opacity: 0.55;
+  -webkit-appearance: none;
+}
+
+.menu-apps:checked {
+  opacity: 1;
+}
+
+.menu-apps:checked ~ .sub-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid gray;
+  margin-right: 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 250px;
+  max-height: 450px;
+}
+
+.more-apps:checked:after {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  line-height: 0px;
+  background-color: gray;
+}
+
+.more-apps:checked {
+  width: 100%;
+  height: 1px;
+  font-size: 0;
+  top: 0;
+  left: 0;
+  outline: none;
+}
+
+.more-apps:after {
+  content: "More";
+  position: absolute;
+  top: -30px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.more-button {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  padding-top: 10px;
+  position: relative;
+}
+
+.more-apps:checked ~ .sub-menu-more {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 250px;
+  left: 0px;
+}
+
+.more-apps {
+  background: #ebebeb;
+  width: 100%;
+  cursor: pointer;
+  position: relative;
+  top: 10px;
+  display: block;
+  -webkit-appearance: none;
+}
+.more-apps:hover {
+  background: #c1c1c1;
+}
+.more-apps ~ * {
   display: none;
 }
 
@@ -16,19 +117,21 @@
 .sub-menu {
   position: absolute;
   margin-top: 20px;
-  height: 200px;
+  height: 400px;
 }
 
 .sub-menu-more {
   position: relative;
-  height: 250px;
+  height: 320px;
+  margin-top: 10px;
 }
 
 .sub-menu-item,
 .sub-menu-more-item,
 .main-menu-item {
   margin-right: 10px;
-  padding:10px;
+  padding: 10px;
+  display: flex;
 }
 
 a.ref-item {
@@ -38,44 +141,6 @@ a.ref-item {
 .sub-menu-item:hover,
 .sub-menu-more-item:hover {
   outline: 1px solid #e5e5e5;
-}
-
-ul {
-  list-style: none;
-  margin: 0px;
-  display: block;
-  padding: 0px;
-}
-
-.sub-menu-item-ref {
-  background-color: gray;
-  display: flex;
-  flex-basis: 250px;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-item:focus ~ .sub-menu,
- .main-item:active ~ .sub-menu,
-.sub-menu:hover {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  border: 2px solid gray;
-  margin-right: 10px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  width: 250px;
-  max-height: 400px;
-}
-
-.more-apps:checked ~ .sub-menu-item-ref {
-  height: 1px;
-  overflow: hidden;
-  width: 80%;
-  display: block;
-  margin: 0 auto;
 }
 
 .other-products {
@@ -88,25 +153,70 @@ ul {
   color: #808080;
 }
 
-.more-apps {
-  display: none;
+.sub-icon-item {
+  margin: 0 auto;
+  display: block;
+  height: 32px;
+  vertical-align: top;
+  width: 32px;
 }
 
-.more-apps:checked ~ .sub-menu-more {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  overflow-y: auto;
-  overflow-x: hidden;
-  width: 250px;
-  left:0px;
+.icon-more-item1,
+.icon-item1 {
+  background-image: url(images/twitter_bird.png);
+  background-repeat: no-repeat;
 }
 
-.apps-close {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+.icon-more-item2,
+.icon-item2 {
+  background-image: url(images/facebook.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item3,
+.icon-item3 {
+  background-image: url(images/heart.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item4,
+.icon-item4 {
+  background-image: url(images/linkedin.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item5,
+.icon-item5 {
+  background-image: url(images/pinterest.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item6,
+.icon-item6 {
+  background-image: url(images/podcast.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item7,
+.icon-item7 {
+  background-image: url(images/rss.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item8,
+.icon-item8 {
+  background-image: url(images/share_this.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item9,
+.icon-item9 {
+  background-image: url(images/star.png);
+  background-repeat: no-repeat;
+}
+
+.icon-more-item10,
+.icon-item10 {
+  background-image: url(images/vimeo.png);
+  background-repeat: no-repeat;
 }
