--- a/submissions/linkqwd/html-css-practice/src/sass/styles.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/styles.scss
@@ -1,7 +1,7 @@
 @import '_reset';
 @import '_colors';
 @import '_mixins';
-@import 'blocks/b-apps/index';
-@import 'blocks/b-layout/index';
-@import 'blocks/b-menu/index';
-@import 'blocks/b-toggle/index';
+@import 'blocks/apps/index';
+@import 'blocks/layout/index';
+@import 'blocks/menu/index';
+@import 'blocks/toggle/index';
