--- a/submissions/linkqwd/html-css-practice/src/css/styles.css
+++ b/submissions/linkqwd/html-css-practice/src/css/styles.css
@@ -94,19 +94,11 @@ img {
   max-width: 100%;
 }
 
-.b-apps {
+.apps {
   font-size: 0;
 }
 
-.b-apps__item {
-  display: inline-block;
-  width: 33.3%;
-  text-align: center;
-  vertical-align: top;
-  transition: border-color 225ms ease-in-out;
-}
-
-.b-apps__item-link {
+.apps__link {
   display: block;
   text-decoration: none;
   padding: 5px;
@@ -119,11 +111,11 @@ img {
   box-sizing: border-box;
 }
 
-.b-apps__item-link:hover {
+.apps__link:hover {
   border-color: #ddd;
 }
 
-.b-apps__item-link:before {
+.apps__link::before {
   display: block;
   content: '';
   width: 55px;
@@ -131,7 +123,99 @@ img {
   margin: auto;
 }
 
-.b-apps__all-apps-link {
+.apps__item {
+  display: inline-block;
+  width: 33.3%;
+  text-align: center;
+  vertical-align: top;
+  transition: border-color 225ms ease-in-out;
+}
+
+.apps__link_icon_youtube::before {
+  background: url(../img/v1_051523630.png) -30px 510px;
+}
+
+.apps__link_icon_translate::before {
+  background: url(../img/v1_051523630.png) -4px 652px;
+}
+
+.apps__link_icon_search::before {
+  background: url(../img/v1_051523630.png) -5px 927px;
+}
+
+.apps__link_icon_play::before {
+  background: url(../img/v1_051523630.png) -4px 2487px;
+}
+
+.apps__link_icon_photos::before {
+  background: url(../img/v1_051523630.png) -6px 1379px;
+}
+
+.apps__link_icon_maps::before {
+  background: url(../img/v1_051523630.png) -26px 1588px;
+}
+
+.apps__link_icon_keep::before {
+  background: url(../img/v1_051523630.png) -4px 2591px;
+}
+
+.apps__link_icon_jamboard::before {
+  background: url(../img/v1_051523630.png) -4px 995px;
+}
+
+.apps__link_icon_hangouts::before {
+  background: url(../img/v1_051523630.png) -4px 2729px;
+}
+
+.apps__link_icon_google::before {
+  background: url(../img/v1_051523630.png) -7px 2419px;
+}
+
+.apps__link_icon_gmail::before {
+  background: url(../img/v1_051523630.png) -4px 100px;
+}
+
+.apps__link_icon_earth::before {
+  background: url(../img/v1_051523630.png) -4px 439px;
+}
+
+.apps__link_icon_drive::before {
+  background: url(../img/v1_051523630.png) -4px 2316px;
+}
+
+.apps__link_icon_docs::before {
+  background: url(../img/v1_051523630.png) -4px 2105px;
+}
+
+.apps__link_icon_contacts::before {
+  background: url(../img/v1_051523630.png) -4px 1240px;
+}
+
+.apps__link_icon_collections::before {
+  background: url(../img/v1_051523630.png) -4px 1308px;
+}
+
+.apps__link_icon_classroom::before {
+  background: url(../img/v1_051523630.png) -4px 2175px;
+}
+
+.apps__link_icon_calendar::before {
+  background: url(../img/v1_051523630.png) -4px 2661px;
+}
+
+.apps__link_icon_bussiness::before {
+  background: url(../img/v1_051523630.png) -4px 1898px;
+}
+
+.apps__link_icon_blogger::before {
+  background: url(../img/v1_051523630.png) -21px 1656px;
+}
+
+.apps__link_icon_account::before {
+  background: url(../img/v1_051523630.png) -4px 2799px;
+}
+
+.apps__all-apps-link {
   width: 100%;
   margin-top: 30px;
   font-size: 14px;
@@ -139,144 +223,54 @@ img {
   transition: color 225ms ease-in-out;
 }
 
-.b-apps__all-apps-link:hover {
+.apps__all-apps-link:hover {
   color: black;
 }
 
-.b-apps__item-link_icon_docs:before {
-  background: url(../img/v1_051523630.png) -4px 2105px;
+.apps__item_state_hidden {
+  display: none;
 }
 
-.b-apps__item-link_icon_translate:before {
-  background: url(../img/v1_051523630.png) -4px 652px;
-}
-
-.b-apps__item-link_icon_google:before {
-  background: url(../img/v1_051523630.png) -7px 2419px;
-}
-
-.b-apps__item-link_icon_search:before {
-  background: url(../img/v1_051523630.png) -5px 927px;
-}
-
-.b-apps__item-link_icon_youtube:before {
-  background: url(../img/v1_051523630.png) -30px 510px;
-}
-
-.b-apps__item-link_icon_play:before {
-  background: url(../img/v1_051523630.png) -4px 2487px;
-}
-
-.b-apps__item-link_icon_gmail:before {
-  background: url(../img/v1_051523630.png) -4px 100px;
-}
-
-.b-apps__item-link_icon_drive:before {
-  background: url(../img/v1_051523630.png) -4px 2316px;
-}
-
-.b-apps__item-link_icon_calendar:before {
-  background: url(../img/v1_051523630.png) -4px 2661px;
-}
-
-.b-apps__item-link_icon_bussiness:before {
-  background: url(../img/v1_051523630.png) -4px 1898px;
-}
-
-.b-apps__item-link_icon_blogger:before {
-  background: url(../img/v1_051523630.png) -21px 1656px;
-}
-
-.b-apps__item-link_icon_photos:before {
-  background: url(../img/v1_051523630.png) -6px 1379px;
-}
-
-.b-apps__item-link_icon_maps:before {
-  background: url(../img/v1_051523630.png) -26px 1588px;
-}
-
-.b-apps__item-link_icon_account:before {
-  background: url(../img/v1_051523630.png) -4px 2799px;
-}
-
-.b-apps__item-link_icon_contacts:before {
-  background: url(../img/v1_051523630.png) -4px 1240px;
-}
-
-.b-apps__item-link_icon_hangouts:before {
-  background: url(../img/v1_051523630.png) -4px 2729px;
-}
-
-.b-apps__item-link_icon_jamboard:before {
-  background: url(../img/v1_051523630.png) -4px 995px;
-}
-
-.b-apps__item-link_icon_classroom:before {
-  background: url(../img/v1_051523630.png) -4px 2175px;
-}
-
-.b-apps__item-link_icon_earth:before {
-  background: url(../img/v1_051523630.png) -4px 439px;
-}
-
-.b-apps__item-link_icon_docs:before {
-  background: url(../img/v1_051523630.png) -4px 2105px;
-}
-
-.b-apps__item-link_icon_keep:before {
-  background: url(../img/v1_051523630.png) -4px 2591px;
-}
-
-.b-apps__item-link_icon_collections:before {
-  background: url(../img/v1_051523630.png) -4px 1308px;
-}
-
-.b-layout {
+.layout {
   max-width: 960px;
   padding: 40px;
   background: #fefefe;
   margin: 0 auto;
 }
 
-.b-menu {
+.menu {
   text-align: right;
   position: relative;
   box-sizing: border-box;
 }
 
-.b-menu__item {
+.menu__item {
   display: inline-block;
   vertical-align: middle;
 }
 
-.b-menu__item + .b-menu__item {
+.menu__item + .menu__item {
   margin-left: 20px;
 }
 
-.b-menu__drop-down {
-  position: absolute;
-  right: 0;
-  top: calc(100% + 20px);
-}
-
-.b-menu__item-link {
+.menu__link {
   color: #333;
   text-decoration: none;
   transition: all 225ms ease-in-out;
 }
 
-.b-menu__item-link:hover {
+.menu__link:hover {
   text-decoration: underline;
   color: #000;
 }
 
-.b-menu__item_type_apps {
+.menu__item_type_apps {
   background: url(../img/v1_051523630.png) -5px 1033px;
   min-height: 20px;
   min-width: 20px;
 }
 
-.b-menu__item_type_apps:after {
+.menu__item_type_apps::after {
   min-height: 20px;
   min-width: 20px;
   display: block;
@@ -288,11 +282,11 @@ img {
   pointer-events: none;
 }
 
-.b-menu__item_type_apps:hover:after {
+.menu__item_type_apps:hover:after {
   opacity: 0;
 }
 
-.b-menu__item_type_bell {
+.menu__item_type_bell {
   min-height: 20px;
   min-width: 20px;
   border-radius: 50%;
@@ -300,7 +294,7 @@ img {
   transition: background 200ms ease-in-out;
 }
 
-.b-menu__item_type_bell:after {
+.menu__item_type_bell::after {
   display: block;
   content: '';
   background: url(../img/v1_051523630.png) -69px 865px;
@@ -310,11 +304,11 @@ img {
   margin-top: -20px;
 }
 
-.b-menu__item_type_bell:hover {
+.menu__item_type_bell:hover {
   background: black;
 }
 
-.b-menu__item_type_profile {
+.menu__item_type_profile {
   height: 32px;
   width: 32px;
   background: #0097a7;
@@ -324,7 +318,7 @@ img {
   position: relative;
 }
 
-.b-menu__item_type_profile:after {
+.menu__item_type_profile::after {
   content: 'A';
   position: absolute;
   top: 50%;
@@ -333,62 +327,61 @@ img {
   pointer-events: none;
 }
 
-.b-menu__item_type_profile .b-toggle__label {
+.menu__item_type_profile .toggle__label {
   height: 32px;
   width: 32px;
 }
 
-.b-menu__item_type_profile .b-menu__item-decoration-triangle:after, .b-menu__item_type_profile .b-menu__item-decoration-triangle:before {
+.menu__item_type_profile .menu__item-decoration-triangle:after, .menu__item_type_profile .menu__item-decoration-triangle:before {
   right: 8px;
 }
 
-.b-menu__item-decoration-triangle {
+.menu__item-decoration-triangle {
   opacity: 0;
   visibility: hidden;
   transition: all 100ms ease-in-out;
 }
 
-.b-menu__item-decoration-triangle:after, .b-menu__item-decoration-triangle:before {
+.menu__item-decoration-triangle::after, .menu__item-decoration-triangle::before {
   content: '';
   position: absolute;
   top: calc(100% + 5px);
   border-style: solid;
 }
 
-.b-menu__item-decoration-triangle:after {
+.menu__item-decoration-triangle::after {
   border-color: transparent transparent #fff transparent;
   border-width: 8px;
 }
 
-.b-menu__item-decoration-triangle:before {
+.menu__item-decoration-triangle::before {
   border-color: transparent transparent #444 transparent;
   border-width: 8px;
 }
 
-.b-toggle {
+.toggle {
   text-align: left;
-  display: block;
 }
 
-.b-toggle__input-drop-down {
+.toggle__drop-down {
   opacity: 0;
   position: absolute;
   top: -10000px;
 }
 
-.b-toggle__input-drop-down:checked ~ .b-toggle__content-wrapper, .b-toggle__input-drop-down:checked ~ .b-menu__item-decoration-triangle {
+.toggle__drop-down:checked ~ .toggle__content-wrapper, .toggle__drop-down:checked ~ .menu__item-decoration-triangle {
   opacity: 1;
   visibility: visible;
 }
 
-.b-toggle__label {
+.toggle__label {
   display: block;
   width: 20px;
   height: 20px;
   cursor: pointer;
 }
 
-.b-toggle__content-wrapper {
+.toggle__content-wrapper {
   opacity: 0;
   visibility: hidden;
   width: 320px;
@@ -400,15 +393,18 @@ img {
   max-height: 500px;
   overflow: auto;
   transition: all 100ms ease-in-out;
+  position: absolute;
+  right: 0;
+  top: calc(100% + 20px);
 }
 
 @supports (overflow: overlay) {
-  .b-toggle__content-wrapper {
+  .toggle__content-wrapper {
     overflow: overlay;
   }
 }
 
-.b-toggle__show-more {
+.toggle__show-more {
   display: block;
   padding: 12px;
   margin: 25px -30px -40px -30px;
@@ -418,33 +414,29 @@ img {
   cursor: pointer;
 }
 
-.b-toggle__input-more {
+.toggle__input-more {
   opacity: 0;
   position: absolute;
   top: -10000px;
 }
 
-.b-toggle__input-more:checked ~ .b-toggle__show-more {
+.toggle__input-more:checked ~ .toggle__show-more {
   display: none;
 }
 
-.b-toggle__input-more:checked ~ .b-toggle__hidden {
+.toggle__input-more:checked ~ .apps__item_state_hidden {
   display: inline-block;
 }
 
-.b-toggle__input-more:checked ~ .b-toggle__hidden-block-wrap {
+.toggle__input-more:checked ~ .toggle__hidden-block-wrap {
   display: block;
 }
 
-.b-toggle__input-more:focus ~ .b-toggle__show-more {
+.toggle__input-more:focus ~ .toggle__show-more {
   text-decoration: underline;
 }
 
-.b-toggle__hidden {
-  display: none;
-}
-
-.b-toggle__hidden-block-wrap {
+.toggle__hidden-block-wrap {
   display: none;
   margin: 40px 0 -15px 0;
   text-align: center;
