--- a/submissions/justdevway/Google-style Popup/src/scss/header/header.scss
+++ b/submissions/justdevway/Google-style Popup/src/scss/header/header.scss
@@ -24,47 +24,37 @@
     text-decoration: none;
 
     &--apps {
-      display: block;
+      padding: 0;
     }
 
     &:hover,
-    &:focus,
-    &:active {
+    &:focus {
       text-decoration: underline;
     }
 
-    &:focus,
-    &:active {
+    &:focus {
       border: 1px solid #000;
     }
 
+    &:active {
+      text-decoration: underline;
+      border: 1px solid blue;
+    }
+
     &--notification {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 20px;
-      height: 20px;
       padding: 0;
-      margin: 5px;
-      border-radius: 50%;
-      overflow: hidden;
-      background: rgba(0, 0, 0, 0.55);
-      transition-property: background;
-      transition-duration: 0.175s;
-      transition-timing-function: linear;
+      border: 1px solid rgba(0, 0, 0, 0);
     }
 
     &--notification:focus,
-    &--notification:active,
     &--notification:hover {
-      background: rgba(0, 0, 0, 1);
+      border: 1px solid #000;
     }
 
-    &--notification img {
-      width: 10px;
-      height: 10px;
-      fill: #fff;
+    &--notification:active {
+      border: 1px solid blue;
     }
+
 
     &--controller {
       position: absolute;
@@ -83,17 +73,49 @@
       border: 1px solid rgba(204, 204, 204, 0.2);
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 
-      &:hover,
-      &:focus,
+      &:focus {
+        border: 1px solid #000;
+      }
+
       &:active {
-        border: 1px solid rgba(0, 0, 0, 0);
+        border: 1px solid blue;
       }
     }
   }
 
+  &__notification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    margin: 5px;
+    border-radius: 50%;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.55);
+    transition-property: background;
+    transition-duration: 0.175s;
+    transition-timing-function: linear;
+
+    img {
+      width: 10px;
+      height: 10px;
+      fill: #fff;
+    }
+  }
+
+  &__link:focus .header__notification {
+    background: #000;
+  }
+
+  &__link--controller:focus + .header__link {
+    border: 1px solid #000;
+  }
+
   &__link--controller:focus ~ .header__link > .header__apps,
   &:hover  .header__apps {
-    fill: rgba(0, 0, 0, 1);
+    fill: #000;
   }
 
   &__link--controller:checked ~ .header__link--menu {
