--- a/submissions/linkqwd/html-css-practice/src/sass/blocks/toggle/toggle__drop-down.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/blocks/toggle/toggle__drop-down.scss
@@ -7,4 +7,8 @@
         opacity: 1;
         visibility: visible;
     }
+
+    &:focus + .toggle__label {
+        box-shadow: 0px 0px 0px 2px #a5c7fe;
+    }
 }
