--- a/submissions/linkqwd/html-css-practice/src/sass/blocks/apps/index.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/blocks/apps/index.scss
@@ -1,6 +1,6 @@
-@import 'apps';
-@import 'apps__link';
-@import 'apps__item';
-@import 'apps__link_icons';
-@import 'apps__all-apps-link';
-@import 'apps__item_state_hidden';
+@import "apps";
+@import "apps__link";
+@import "apps__item";
+@import "apps__link_icons";
+@import "apps__all-apps-link";
+@import "apps__item_state_hidden";
