--- a/submissions/linkqwd/html-css-practice/src/sass/styles.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/styles.scss
@@ -1,7 +1,6 @@
-@import '_reset';
-@import '_colors';
-@import '_mixins';
-@import 'blocks/apps/index';
-@import 'blocks/layout/index';
-@import 'blocks/menu/index';
-@import 'blocks/toggle/index';
+@import "_reset";
+@import "_colors";
+@import "_mixins";
+@import "blocks/apps/index";
+@import "blocks/menu/index";
+@import "blocks/toggle/index";
