--- a/submissions/linkqwd/html-css-practice/src/sass/_reset.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/_reset.scss
@@ -1,82 +1,157 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
- margin:0;
- padding:0;
- border:0;
- outline:0;
- font-size:100%;
- vertical-align:baseline;
- background:transparent;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 body {
- line-height:1;
- font-family: arial, sans-serif
+  line-height: 1;
+  font-family: arial, sans-serif;
+  max-width: 960px;
+  padding: 40px;
+  background: #fefefe;
+  margin: 0 auto;
 }
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
- display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 nav ul {
- list-style:none;
+  list-style: none;
 }
-blockquote, q {
- quotes:none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
- content:'';
- content:none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 a {
- margin:0;
- padding:0;
- font-size:100%;
- vertical-align:baseline;
- background:transparent;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 ins {
- background-color:#ff9;
- color:#000;
- text-decoration:none;
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
 }
 mark {
- background-color:#ff9;
- font-style:italic;
- font-weight:bold;
+  background-color: #ff9;
+  font-style: italic;
+  font-weight: bold;
 }
 del {
- text-decoration: line-through;
+  text-decoration: line-through;
 }
-abbr[title], dfn[title] {
- border-bottom:1px dotted;
- cursor:help;
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
 }
 table {
- border-collapse:collapse;
- border-spacing:0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 hr {
- display:block;
- height:1px;
- border:0; 
- border-top:1px solid #cccccc;
- margin:1em 0;
- padding:0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
 }
-input, select {
- vertical-align:middle;
+input,
+select {
+  vertical-align: middle;
 }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
 }
