--- a/submissions/linkqwd/html-css-practice/src/sass/blocks/toggle/toggle__drop-down.scss
+++ b/submissions/linkqwd/html-css-practice/src/sass/blocks/toggle/toggle__drop-down.scss
@@ -1,14 +1,15 @@
 .toggle__drop-down {
-    opacity: 0;
-    position: absolute;
-    top: -10000px;
+  opacity: 0;
+  position: absolute;
+  top: -10000px;
 
-    &:checked ~ .toggle__content-wrapper, &:checked ~ .menu__item-decoration-triangle {
-        opacity: 1;
-        visibility: visible;
-    }
+  &:checked ~ .toggle__content-wrapper,
+  &:checked ~ .menu__item-decoration-triangle {
+    opacity: 1;
+    visibility: visible;
+  }
 
-    &:focus + .toggle__label {
-        box-shadow: 0px 0px 0px 2px #a5c7fe;
-    }
+  &:focus + .toggle__label {
+    box-shadow: 0px 0px 0px 2px #a5c7fe;
+  }
 }
